# swagger.yml
@@ -1398,55 +1398,25 @@ paths:
           required: false
           schema:
             type: number
-        - name: pValue
+        - name: maxPValue
           in: query
           required: false
           description: Threshold of the FDR adjusted p-value. Default is 0.05.
           schema:
             type: number
             default: 0.05
-        - name: pValueDirection
-          in: query
-          required: false
-          description: Direction of the FDR adjusted p-value threshold (<=, >=).
-          schema:
-            type: string
-            enum:
-              - <
-              - ">"
-            default: <
-        - name: mscor
+        - name: minMscor
           in: query
           required: false
           description: Threshold of the 'multiple sensitivity correlation' (mscor).
           schema:
             type: number
-        - name: mscorDirection
-          in: query
-          required: false
-          description: Direction of the mscor threshold (<=, >=).
-          schema:
-            type: string
-            enum:
-              - <
-              - ">"
-            default: <
-        - name: correlation
+        - name: minCorrelation
           in: query
           required: false
           description: Threshold of the correlation.
           schema:
             type: number
-        - name: correlationDirection
-          in: query
-          required: false
-          description: Direction of the correlation threshold (<=, >=).
-          schema:
-            type: string
-            enum:
-              - <
-              - ">"
-            default: <
         - name: edgeSorting
           in: query
           required: false
@@ -1467,13 +1437,6 @@ paths:
               - betweenness
               - degree
               - eigenvector
-        - name: descending
-          in: query
-          required: false
-          description: Descending (true) or ascending (false) ordering of the results.
-          schema:
-            type: boolean
-            default: true
         - name: maxNodes
           in: query
           description: Number of nodes that should be shown. Default value is 100 and can be up to 1000. For more results please use batches, the provided offset parameter or download the whole dataset.
